--- a/music/pop.html
+++ b/music/pop.html
@@ -99,7 +99,7 @@
                       <a href="#Classic">Classic pop</a>
                   </li>
                   <li>
-                      <a href="#Pop rock">Pop rock</a>
+                      <a href="#Pop_rock">Pop rock</a>
                   </li>
                   <li>
                       <a href="#Country">Country pop</a>
@@ -147,8 +147,7 @@
                           <a href="https://www.youtube.com/channel/UCnRI0ay61tY-fKYzzB3fCnw" target="_blank"><img
                                   class="yt-icon" src="../images/icons/yt.png" alt="youtube link" /></a>
                       </div>
-                  </div>
-                  ,
+                  </div>,
                   <div class="multi-link">
                       <span>Elvis Presley</span>
                       <div>
@@ -189,8 +188,9 @@
                           </div>
                       </div>
                   </div>
+              </figure>
           </section>
-          <section id="Pop rock">
+          <section id="Pop_rock">
               <h2>
                   Pop Rock
               </h2>
@@ -214,8 +214,7 @@
                           <a href="https://www.youtube.com/channel/UCc4K7bAqpdBP8jh1j9XZAww" target="_blank"><img
                                   class="yt-icon" src="../images/icons/yt.png" alt="youtube link" /></a>
                       </div>
-                  </div>
-                  ,
+                  </div>,
                   <div class="multi-link">
                       <span>Queen</span>
                       <div>
@@ -255,7 +254,7 @@
                           </div>
                       </div>
                   </div>
-
+              </figure>
           </section>
           <section id="Country">
               <h2>
@@ -279,8 +278,7 @@
                           <a href="https://www.youtube.com/results?search_query=Merle+Haggard" target="_blank"><img
                                   class="yt-icon" src="../images/icons/yt.png" alt="youtube link" /></a>
                       </div>
-                  </div>
-                  ,
+                  </div>,
                   <div class="multi-link">
                       <span>Johnny Cash</span>
                       <div>
@@ -291,9 +289,7 @@
                           <a href="https://www.youtube.com/results?search_query=Johnny+Cash" target="_blank"><img
                                   class="yt-icon" src="../images/icons/yt.png" alt="youtube link" /></a>
                       </div>
-                  </div>
-
-                  ,
+                  </div>,
                   <div class="multi-link">
                       <span> Willie Nelson</span>
                       <div>
@@ -304,9 +300,7 @@
                           <a href="https://www.youtube.com/user/WillieNelson" target="_blank"><img class="yt-icon"
                                   src="../images/icons/yt.png" alt="youtube link" /></a>
                       </div>
-                  </div>
-
-                  ,
+                  </div>,
                   <div class="multi-link">
                       <span> Taylor Swift</span>
                       <div>
@@ -357,6 +351,7 @@
                           </div>
                       </div>
                   </div>
+              </figure>
           </section>
           <section id="Dream">
               <h2>
@@ -386,9 +381,7 @@
                           <a href="https://www.youtube.com/results?search_query=Taylor+Swift" target="_blank"><img
                                   class="yt-icon" src="../images/icons/yt.png" alt="youtube link" /></a>
                       </div>
-                  </div>
-
-                  ,
+                  </div>,
                   <div class="multi-link">
                       <span> Lana Del Rey</span>
                       <div>
@@ -401,7 +394,6 @@
                       </div>
                   </div>
               </div>
-
               <div class="spotify-integ">
                   <div>
                       <iframe src="https://open.spotify.com/embed/track/3fVnlF4pGqWI9flVENcT28"
@@ -429,6 +421,7 @@
                           </div>
                       </div>
                   </div>
+              </figure>
           </section>
           <section id="Dance">
               <h2>
@@ -490,6 +483,7 @@
                           </div>
                       </div>
                   </div>
+              </figure>
           </section>
           <section id="Synth">
               <h2>
@@ -511,9 +505,8 @@
                                   src="../images/icons/wiki.png" alt="wikipedia link" /></a>
                           <a href="https://www.youtube.com/user/neworder" target="_blank"><img class="yt-icon"
                                   src="../images/icons/yt.png" alt="youtube link" /></a>
-                      </div>,
-                  </div>
-
+                      </div>
+                  </div>,
                   <div class="multi-link">
                       <span>Depeche Mode</span>
                       <div>
@@ -526,7 +519,6 @@
                       </div>
                   </div>
               </div>
-
               <div class="spotify-integ">
                   <div>
                       <iframe src="https://open.spotify.com/embed/track/1RSy7B2vfPi84N80QJ6frX"
@@ -554,6 +546,7 @@
                           </div>
                       </div>
                   </div>
+              </figure>
           </section>
           <section id="K">
               <h2>
@@ -579,8 +572,7 @@
                           <a href="https://www.youtube.com/channel/UCLkAepWjdylmXSltofFvsYQ" target="_blank"><img
                                   class="yt-icon" src="../images/icons/yt.png" alt="youtube link" /></a>
                       </div>
-                  </div>
-                  ,
+                  </div>,
                   <div class="multi-link">
                       <span>Girls' Generation</span>
                       <div>
@@ -591,8 +583,7 @@
                           <a href="https://www.youtube.com/channel/UCPENYtHg4Xhmm6oX8zaQA7Q" target="_blank"><img
                                   class="yt-icon" src="../images/icons/yt.png" alt="youtube link" /></a>
                       </div>
-                  </div>
-                  ,
+                  </div>,
                   <div class="multi-link">
                       <span>BIGBANG</span>
                       <div>
@@ -604,7 +595,6 @@
                                   src="../images/icons/yt.png" alt="youtube link" /></a>
                       </div>
                   </div>
-              </div>
               </div>
               <div class="spotify-integ">
                   <div>
@@ -633,6 +623,7 @@
                           </div>
                       </div>
                   </div>
+              </figure>
           </section>
           <section id="Latin">
               <h2>
@@ -668,7 +659,6 @@
                       </div>
                   </div>
               </div>
-
               <div class="spotify-integ">
                   <div>
                       <iframe src="https://open.spotify.com/embed/track/6habFhsOp2NvshLv26DqMb"
@@ -696,8 +686,8 @@
                           </div>
                       </div>
                   </div>
+              </figure>
           </section>
-
           <section id="Baroque">
               <h2>
                   Baroque Pop
@@ -710,7 +700,7 @@
               </p>
               <span class="source">Source : fr.wikipedia.org/wiki/Pop_baroque</span>
               <div class="paragraph">
-                  Artistes:
+                  Artiste:
                   <div class="multi-link">
                       <span> Lana Del Rey</span>
                       <div>
@@ -750,19 +740,21 @@
                           </div>
                       </div>
                   </div>
+              </figure>
           </section>
           <section id="today">
               <h2>
                   Aujourd'hui
               </h2>
               <div class="paragraph">
-                  <p> La Pop a toujours une place importante dans la musique. Nous écoutons la musique pop tous les
-                      jours à la télévision, la radio, au concert... La Pop est facile d’accès, ce qui la rend plus
-                      populaire dans la vie quotidienne. Les chansons sont jolies et simples, tout le monde peut les
-                      écouter et partager leurs émotions sur la musique.
-                      <p> La création est toujours essentielle dans la musique pop, ce qui mène à créer des nouveaux
-                          types de musique et la mode dans le monde .</p>
-                      <span class="button"><a href="#">Retour en haut de la page !</a></span>
+                  La Pop a toujours une place importante dans la musique. Nous écoutons la musique pop tous les
+                  jours à la télévision, la radio, au concert... La Pop est facile d’accès, ce qui la rend plus
+                  populaire dans la vie quotidienne. Les chansons sont jolies et simples, tout le monde peut les
+                  écouter et partager leurs émotions sur la musique.
+                  La création est toujours essentielle dans la musique pop, ce qui mène à créer des nouveaux
+                  types de musique et la mode dans le monde .
+                  <span class="button"><a href="#">Retour en haut de la page !</a></span>
+              </div>
           </section>
       </main>
       <footer>
