--- a/music/rap.html
+++ b/music/rap.html
@@ -30,52 +30,50 @@
     </aside>
     <main>
         <section class="no-top-separator">
-            <article id="le rap">
-                <h2>
-                    Le Rap
-                </h2>
-                <div class="paragraph">
-                    Le rap est un mouvement culturel et musical qui mêle le chant aux paroles,
-                    scandées sur un rythme rapide. Il tire ses origines du hip-hop, crée au début des années 70 dans
-                    les ghettos aux États-Unis. En France, le mouvement hip-hop touche principalement la jeunesse des
-                    cités.
-                    En 1979, "Rapper's Delight" de Sugarhill Gang devient le premier single rap
-                    dans le monde.
+            <h2>
+                Le Rap
+            </h2>
+            <div class="paragraph">
+                Le rap est un mouvement culturel et musical qui mêle le chant aux paroles,
+                scandées sur un rythme rapide. Il tire ses origines du hip-hop, crée au début des années 70 dans
+                les ghettos aux États-Unis. En France, le mouvement hip-hop touche principalement la jeunesse des cités.
+                En 1979, "Rapper's Delight" de Sugarhill Gang devient le premier single rap
+                dans le monde.
+            </div>
+            <span class="source">Source : Wikipédia, slate.fr </span>
+            <div class="spotify-integ">
+                <div>
+                    <iframe src="https://open.spotify.com/embed/track/0tm6gsXe0LSm9zeSspyMQu"
+                        allow="encrypted-media"></iframe>
                 </div>
-                <span class="source">Source : Wikipédia, slate.fr </span>
-                <div class="spotify-integ">
-                    <div>
-                        <iframe src="https://open.spotify.com/embed/track/0tm6gsXe0LSm9zeSspyMQu"
-                            allow="encrypted-media"></iframe>
-                    </div>
-                </div>
-                <figure class="yt-integ">
+            </div>
+            <figure class="yt-integ">
+                <div>
                     <div>
                         <div>
-                            <div>
-                                <iframe src="https://www.youtube-nocookie.com/embed/ag_jeCgwVrw"
-                                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-                                    allowfullscreen></iframe>
-                            </div>
+                            <iframe src="https://www.youtube-nocookie.com/embed/ag_jeCgwVrw"
+                                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
                         </div>
                     </div>
-                    <figcaption>
-                        Le premier tube de rap, Rapper's Delight de Sugarhill Gang.
-                    </figcaption>
-                </figure>
-                <div class="paragraph">
-                    On distingue principalement 2 types de rap: le rap français et le rap américain.
                 </div>
-                <ul>
-                    <li>
-                        <a href="#rapfr">Rap FR</a>
-                    </li>
-                    <li>
-                        <a href="#rapus">Rap US</a>
-                    </li>
-                </ul>
-            </article>
+                <figcaption>
+                    Le premier tube de rap, Rapper's Delight de Sugarhill Gang.
+                </figcaption>
+            </figure>
+            <div class="paragraph">
+                On distingue principalement 2 types de rap: le rap français et le rap américain.
+            </div>
+            <ul>
+                <li>
+                    <a href="#rapfr">Rap FR</a>
+                </li>
+                <li>
+                    <a href="#rapus">Rap US</a>
+                </li>
+            </ul>
         </section>
+
         <section id="rapfr">
             <h2>
                 Rap Fr
@@ -84,17 +82,19 @@
                 Voici ci-dessous une liste de quelques rappeurs les plus connus aujourd'hui.
             </div>
             <article id="Columbine">
-                <div class="multi-link">
-                    <span>Columbine</span>
-                    <div>
-                        <a href="https://open.spotify.com/artist/5AAzeysphag0NxJxLbbVla" target="_blank"><img
-                                class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
-                        <a href="https://fr.wikipedia.org/wiki/Columbine_(groupe)" target="_blank"><img
-                                class="wiki-icon" src="../images/icons/wiki.png" alt="wikipedia link" /></a>
-                        <a href="https://www.youtube.com/user/Columbine2K16" target="_blank"><img class="yt-icon"
-                                src="../images/icons/yt.png" alt="youtube link" /></a>
-                    </div>
-                </div>
+                <h3>
+                        <span class="multi-link">
+                                <span>Columbine</span>
+                                <span>
+                                    <a href="https://open.spotify.com/artist/5AAzeysphag0NxJxLbbVla" target="_blank"><img
+                                            class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
+                                    <a href="https://fr.wikipedia.org/wiki/Columbine_(groupe)" target="_blank"><img
+                                            class="wiki-icon" src="../images/icons/wiki.png" alt="wikipedia link" /></a>
+                                    <a href="https://www.youtube.com/user/Columbine2K16" target="_blank"><img class="yt-icon"
+                                            src="../images/icons/yt.png" alt="youtube link" /></a>
+                                </span>
+                            </span>
+                            </h3>
                 <figure class="no-overflow float-right bordered img-align">
                     <img src="../images/columbine.jpg" alt="logo columbine" width="200" class="rounded-corners" />
                     <figcaption>
@@ -275,6 +275,7 @@
                         Le clip basique, dans lequel le Orelsan enchaîne les punchlines, comme "Les hommes
                         politiques doivent mentir sinon tu voterais pas pour eux", et bien d'autres.
                     </figcaption>
+                </figure>
             </article>
         </section>
 
@@ -433,7 +434,7 @@
                 </figcaption>
             </figure>
         </section>
-        <article id="aujourd'hui">
+        <section id="today">
             <div class="paragraph no-overflow">
                 De nos jours, le rap est devenu la musique préférée des adolescents.
                 D'après Pascal Cefran, animateur de la
@@ -451,7 +452,7 @@
                 Dre, Sean Combs (Diddy), JAY-Z, et bien d'autres.
                 <span class="source">Sources : la-croix.com, newsmonkey.be </span>
             </div>
-        </article>
+        </section>
     </main>
     <footer>
         <iframe src="../footer.html"></iframe>
