--- a/music/electro.html
+++ b/music/electro.html
@@ -112,7 +112,7 @@
                     </figure>
                 </article>
 
-                <article id="Martin Garrix">
+                <article id="Martin_Garrix">
                     <div class="multi-link ">
                         <span>Martin Garrix</span>
                         <div>
@@ -120,7 +120,7 @@
                                     class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
                             <a href="https://fr.wikipedia.org/wiki/Martin_Garrix" target="_blank"><img class="wiki-icon"
                                     src="../images/icons/wiki.png" alt="wikipedia link" /></a>
-                            <a href=https://www.youtube.com/user/MartinGarrix" target="_blank"><img class="yt-icon"
+                            <a href="https://www.youtube.com/user/MartinGarrix" target="_blank"><img class="yt-icon"
                                     src="../images/icons/yt.png" alt="youtube link" /></a>
                         </div>
                     </div>
@@ -148,7 +148,6 @@
                             <iframe src="https://open.spotify.com/embed/track/0gxGuvGAGfc41ujvTtXE2H"
                                 allow="encrypted-media"></iframe>
                         </div>
-                    </div>
                     </div>
                     <figure class="yt-integ">
                         <div>
@@ -236,6 +235,7 @@
                         Martin Garrix, Marshmello, David Guetta, Calvin Harris, Tiësto, Armin van Buuren, Hardwell,
                         Deadmau5, The Chainsmokers, Skrillex, et beaucoup d'autres.
                         <span class="source">Source : Wikipédia </span>
+                    </div>
                 </article>
             </section>
     </main>
