fixed the horrifying rap.html

--- a/music/rap.html
+++ b/music/rap.html
@@ -83,18 +83,18 @@
             </div>
             <article id="Columbine">
                 <h3>
-                        <span class="multi-link">
-                                <span>Columbine</span>
-                                <span>
-                                    <a href="https://open.spotify.com/artist/5AAzeysphag0NxJxLbbVla" target="_blank"><img
-                                            class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
-                                    <a href="https://fr.wikipedia.org/wiki/Columbine_(groupe)" target="_blank"><img
-                                            class="wiki-icon" src="../images/icons/wiki.png" alt="wikipedia link" /></a>
-                                    <a href="https://www.youtube.com/user/Columbine2K16" target="_blank"><img class="yt-icon"
-                                            src="../images/icons/yt.png" alt="youtube link" /></a>
-                                </span>
-                            </span>
-                            </h3>
+                    <span class="multi-link">
+                        <span>Columbine</span>
+                        <span class="ml-content">
+                            <a href="https://open.spotify.com/artist/5AAzeysphag0NxJxLbbVla" target="_blank"><img
+                                    class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
+                            <a href="https://fr.wikipedia.org/wiki/Columbine_(groupe)" target="_blank"><img
+                                    class="wiki-icon" src="../images/icons/wiki.png" alt="wikipedia link" /></a>
+                            <a href="https://www.youtube.com/user/Columbine2K16" target="_blank"><img class="yt-icon"
+                                    src="../images/icons/yt.png" alt="youtube link" /></a>
+                        </span>
+                    </span>
+                </h3>
                 <figure class="no-overflow float-right bordered img-align">
                     <img src="../images/columbine.jpg" alt="logo columbine" width="200" class="rounded-corners" />
                     <figcaption>
@@ -133,17 +133,19 @@
             </article>
 
             <article id="Nekfeu">
-                <div class="multi-link">
-                    <span>Nekfeu</span>
-                    <div>
-                        <a href="https://open.spotify.com/artist/4LXBc13z5EWsc5N32bLxfH" target="_blank"><img
-                                class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
-                        <a href="https://fr.wikipedia.org/wiki/Nekfeu" target="_blank"><img class="wiki-icon"
-                                src="../images/icons/wiki.png" alt="wikipedia link" /></a>
-                        <a href="https://www.youtube.com/channel/UCvuoyvO5ae3EpxQoLErgR2Q" target="_blank"><img
-                                class="yt-icon" src="../images/icons/yt.png" alt="youtube link" /></a>
-                    </div>
-                </div>
+                <h3>
+                    <span class="multi-link">
+                        <span>Nekfeu</span>
+                        <span class="ml-content">
+                            <a href="https://open.spotify.com/artist/4LXBc13z5EWsc5N32bLxfH" target="_blank"><img
+                                    class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
+                            <a href="https://fr.wikipedia.org/wiki/Nekfeu" target="_blank"><img class="wiki-icon"
+                                    src="../images/icons/wiki.png" alt="wikipedia link" /></a>
+                            <a href="https://www.youtube.com/channel/UCvuoyvO5ae3EpxQoLErgR2Q" target="_blank"><img
+                                    class="yt-icon" src="../images/icons/yt.png" alt="youtube link" /></a>
+                        </span>
+                    </span>
+                </h3>
                 <figure class="float-right bordered">
                     <img src="../images/nekfeu.jpg" alt="nekfeu" width="200" class="rounded-corners" />
                     <figcaption>
@@ -179,17 +181,19 @@
                 </figure>
             </article>
             <article id="PNL">
-                <div class="multi-link">
-                    <span>PNL</span>
-                    <div>
-                        <a href="https://open.spotify.com/artist/3NH8t45zOTqzlZgBvZRjvB" target="_blank"><img
-                                class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
-                        <a href="https://fr.wikipedia.org/wiki/PNL_(groupe)" target="_blank"><img class="wiki-icon"
-                                src="../images/icons/wiki.png" alt="wikipedia link" /></a>
-                        <a href="https://www.youtube.com/channel/UCtBjt766LG9EDVKZx4Q4IHw" target="_blank"><img
-                                class="yt-icon" src="../images/icons/yt.png" alt="youtube link" /></a>
-                    </div>
-                </div>
+                <h3>
+                    <span class="multi-link">
+                        <span>PNL</span>
+                        <span class="ml-content">
+                            <a href="https://open.spotify.com/artist/3NH8t45zOTqzlZgBvZRjvB" target="_blank"><img
+                                    class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
+                            <a href="https://fr.wikipedia.org/wiki/PNL_(groupe)" target="_blank"><img class="wiki-icon"
+                                    src="../images/icons/wiki.png" alt="wikipedia link" /></a>
+                            <a href="https://www.youtube.com/channel/UCtBjt766LG9EDVKZx4Q4IHw" target="_blank"><img
+                                    class="yt-icon" src="../images/icons/yt.png" alt="youtube link" /></a>
+                        </span>
+                    </span>
+                </h3>
                 <figure class="float-right bordered img-align">
                     <img src="../images/pnl.jpg" alt="PNL" width="200" class="rounded-corners" />
                     <figcaption>
@@ -230,17 +234,19 @@
                 </figure>
             </article>
             <article id="Orelsan">
-                <div class="multi-link">
-                    <span>Orelsan</span>
-                    <div>
-                        <a href="https://open.spotify.com/artist/4FpJcNgOvIpSBeJgRg3OfN" target="_blank"><img
-                                class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
-                        <a href="https://fr.wikipedia.org/wiki/Orelsan" target="_blank"><img class="wiki-icon"
-                                src="../images/icons/wiki.png" alt="wikipedia link" /></a>
-                        <a href="https://www.youtube.com/user/orelsan" target="_blank"><img class="yt-icon"
-                                src="../images/icons/yt.png" alt="youtube link" /></a>
-                    </div>
-                </div>
+                <h3>
+                    <span class="multi-link">
+                        <span>Orelsan</span>
+                        <span class="ml-content">
+                            <a href="https://open.spotify.com/artist/4FpJcNgOvIpSBeJgRg3OfN" target="_blank"><img
+                                    class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
+                            <a href="https://fr.wikipedia.org/wiki/Orelsan" target="_blank"><img class="wiki-icon"
+                                    src="../images/icons/wiki.png" alt="wikipedia link" /></a>
+                            <a href="https://www.youtube.com/user/orelsan" target="_blank"><img class="yt-icon"
+                                    src="../images/icons/yt.png" alt="youtube link" /></a>
+                        </span>
+                    </span>
+                </h3>
                 <figure class="float-right bordered">
                     <img src="../images/orelsan.jpg" alt="orelsan" width="200" class="rounded-corners" />
                     <figcaption>
@@ -435,6 +441,9 @@
             </figure>
         </section>
         <section id="today">
+            <h2>
+                Aujourd'hui
+            </h2>
             <div class="paragraph no-overflow">
                 De nos jours, le rap est devenu la musique préférée des adolescents.
                 D'après Pascal Cefran, animateur de la
