rename electro aujourd'hui en today

--- a/music/electro.html
+++ b/music/electro.html
@@ -224,7 +224,7 @@
                         </figcaption>
                     </figure>
                 </article>
-                <article id="aujourd'hui">
+                <article id="today">
                     <div class="paragraph no-overflow">
                         De nos jours, la musique électronique connaît une popularité croissante, qui s'explique entre
                         autre par une large diffusion,
