--- a/music/electro.html
+++ b/music/electro.html
@@ -241,7 +241,7 @@
                     notamment grâce aux nombreux festivals.
                     L'EDM inspire de nombreux autres artistes, c'est pourquoi les DJ multiplient les featuring avec
                     d'autres chanteurs.
-                    Les Dj les plus populaires sont (dans l'ordre croissant): <br />
+                    Les Djs les plus populaires sont (dans l'ordre croissant) :<br />
                     Martin Garrix, Marshmello, David Guetta, Calvin Harris, Tiësto, Armin van Buuren, Hardwell,
                     Deadmau5, The Chainsmokers, Skrillex, et beaucoup d'autres.
                     <span class="source">Source : Wikipédia </span>
