littles fixes on pop

--- a/music/pop.html
+++ b/music/pop.html
@@ -35,7 +35,7 @@
               </h2>
               <div class="paragraph">
                   La musique pop est un genre musical apparu au Royaume-Uni et aux États-Unis.
-                  Par apport au <a href="rock.html#">rock</a>, la pop est plus douce et mélancolique.
+                  Par rapport au <a href="rock.html#">Rock</a>, la pop est plus douce et mélancolique.
                   En 1962,
                   <div class="multi-link">
                       <span>les Beatles</span>
@@ -50,7 +50,7 @@
                   </div>,
                   considérés comme les pionniers du genre, sortaient
                   <div class="multi-link">
-                      <span> Love Me Do</span>
+                      <span>Love Me Do</span>
                       <div>
                           <a href="https://open.spotify.com/track/3VbGCXWRiouAq8VyMYN2MI" target="_blank"><img
                                   class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
@@ -66,7 +66,7 @@
                   leave her now, You know I believe her now », qui se traduit par « Je ne veux pas la quitter
                   maintenant, tu sais que je la crois maintenant ». Ce titre, "Something", chanté par
                   <div class="multi-link">
-                      <span> George Harrison</span>
+                      <span>George Harrison</span>
                       <div>
                           <a href="https://open.spotify.com/artist/7FIoB5PHdrMZVC3q2HE5MS" target="_blank"><img
                                   class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
@@ -88,12 +88,11 @@
                       </div>
                   </div>
                   comme la plus belle chanson d’amour jamais écrite.
-
               </div>
-              <p>
-                  Le style de musique s'est divisé au fil du temps en plusieurs sous-genres (liste non exhaustive) :
-              </p>
               <span class="source">Source : fr.wikipedia.org/wiki/Pop_(musique)</span>
+              <div class="paragraph">
+                  Le style de musique s'est divisé au fil du temps en plusieurs sous-genres (liste non exhaustive) :
+              </div>
               <ul>
                   <li>
                       <a href="#Classic">Classic pop</a>
@@ -130,15 +129,15 @@
               <h2>
                   Classic pop
               </h2>
-              <p>
+              <div class="paragraph">
                   La musique pop traditionnelle viens du Rock, ce qui est simple et doux, avec des rythmes simples et
                   jolis. La musique pop s’appelle aussi standard pop. Normalement le chanteur chante avec une guitare ou
                   un piano.
-              </p>
+              </div>
               <span class="source">Source :en.wikipedia.org/wiki/Classic_Pop_(magazine)</span>
               <div class="paragraph">Artistes:
                   <div class="multi-link">
-                      <span> Bob Dylan</span>
+                      <span>Bob Dylan</span>
                       <div>
                           <a href="https://open.spotify.com/artist/74ASZWbe4lXaubB36ztrGX" target="_blank"><img
                                   class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
@@ -160,7 +159,6 @@
                       </div>
                   </div>
               </div>
-
               <div class="spotify-integ">
                   <div>
                       <iframe src="https://open.spotify.com/embed/track/3G22ix6WU0JjlxaGrMyxRH"
@@ -189,18 +187,19 @@
                       </div>
                   </div>
               </figure>
+              <span class="button"><a href="#">Retour en haut de la page !</a></span>
           </section>
           <section id="Pop_rock">
               <h2>
                   Pop Rock
               </h2>
-              <p>
+              <div class="paragraph">
                   Le Pop Rock, mêlant le style Pop et Rock, est basé sur la guitare. Le pop Rock est plus doux et plus
-                  accessible que le <a href="rock.html#">Rock and Roll</a>. C ‘est une version plus commerciale dans le
+                  accessible que le <a href="rock.html#">Rock and Roll</a>. C‘est une version plus commerciale dans le
                   domaine de la musique et ceux qui écoutent
                   sont souvent des jeunes. Les instruments utilisés sont le plus souvent la guitare électrique, la
                   basse, la batterie, le clavier et le synthétiseur.
-              </p>
+              </div>
               <span class="source">Source : fr.wikipedia.org/wiki/Pop_rock</span>
               <div class="paragraph">
                   Artistes:
@@ -255,17 +254,18 @@
                       </div>
                   </div>
               </figure>
+              <span class="button"><a href="#">Retour en haut de la page !</a></span>
           </section>
           <section id="Country">
               <h2>
                   Country Pop
               </h2>
-              <p>
+              <div class="paragraph">
                   La Country Pop est un genre de fusion entre la musique country et la musique pop. La guitare est
                   essentielle dans la Country Pop. Les paroles sont souvent sur le chagrin d’amour ou la nostalgie. Par
                   rapport à la musique Country, la Country Pop ajoute plus d’ambiance romantique, ce qui la rend plus
                   créative et plus accessible au public.
-              </p>
+              </div>
               <span class="source">Source :fr.wikipedia.org/wiki/Country_pop</span>
               <div class="paragraph">Artistes:
                   <div class="multi-link">
@@ -291,7 +291,7 @@
                       </div>
                   </div>,
                   <div class="multi-link">
-                      <span> Willie Nelson</span>
+                      <span>Willie Nelson</span>
                       <div>
                           <a href="https://open.spotify.com/artist/5W5bDNCqJ1jbCgTxDD0Cb3h" target="_blank"><img
                                   class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
@@ -302,7 +302,7 @@
                       </div>
                   </div>,
                   <div class="multi-link">
-                      <span> Taylor Swift</span>
+                      <span>Taylor Swift</span>
                       <div>
                           <a href="https://open.spotify.com/artist/06HL4z0CvFAxyc27GXpf02" target="_blank"><img
                                   class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
@@ -352,27 +352,28 @@
                       </div>
                   </div>
               </figure>
+              <span class="button"><a href="#">Retour en haut de la page !</a></span>
           </section>
           <section id="Dream">
               <h2>
                   Dream Pop
               </h2>
-              <p>
+              <div class="paragraph">
                   Le livre « The All music Guide to Electronica » définit la dream pop comme « un sous-genre
                   atmosphérique du rock alternatif qui repose autant sur les textures sonores que sur les mélodies ».
                   Les caractéristiques sonores de la dream pop sont un chant murmuré, ainsi que l'utilisation d'effets
-                  de guitare produisant souvent un « mur de bruit ».Dans la dream Pop, le plus important c’est
+                  de guitare produisant souvent un « mur de bruit ». Dans la dream Pop, le plus important c’est
                   l’ambiance qu’il crée. L‘utilisation d’effets de guitare produit souvent un « mur de bruit ». Quand on
                   écoute la dream pop, on pense souvent à de belles choses dans la vie : des fleurs, des rêves, des
                   beaux paysages etc. Le livre « The All music Guide to Electronica » définit la dream pop comme « un
                   sous-genre atmosphérique du rock alternatif qui repose autant sur les textures sonores que sur les
                   mélodies ».
-              </p>
+              </div>
               <span class="source">Source : fr.wikipedia.org/wiki/Dream_pop</span>
               <div class="paragraph">
                   Artistes:
                   <div class="multi-link">
-                      <span> Taylor Swift</span>
+                      <span>Taylor Swift</span>
                       <div>
                           <a href="https://open.spotify.com/artist/06HL4z0CvFAxyc27GXpf02" target="_blank"><img
                                   class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
@@ -383,7 +384,7 @@
                       </div>
                   </div>,
                   <div class="multi-link">
-                      <span> Lana Del Rey</span>
+                      <span>Lana Del Rey</span>
                       <div>
                           <a href="https://open.spotify.com/artist/00FQb4jTyendYWaN8pK0wa" target="_blank"><img
                                   class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
@@ -422,19 +423,20 @@
                       </div>
                   </div>
               </figure>
+              <span class="button"><a href="#">Retour en haut de la page !</a></span>
           </section>
           <section id="Dance">
               <h2>
                   Dance Pop
               </h2>
-              <p>
+              <div class="paragraph">
                   La pop dance, c’est la musique idéale pour danser avec des rythmes forts, des structures de chansons
                   faciles et simples, un accent mis sur la mélodie ainsi que sur des airs entraînants.
-              </p>
+              </div>
               <div class="paragraph">
                   Artistes:
                   <div class="multi-link">
-                      <span> Dua Lipa</span>
+                      <span>Dua Lipa</span>
                       <div>
                           <a href="https://open.spotify.com/artist/6M2wZ9GZgrQXHCFfjv46we" target="_blank"><img
                                   class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
@@ -442,8 +444,8 @@
                                   src="../images/icons/wiki.png" alt="wikipedia link" /></a>
                           <a href="https://www.youtube.com/results?search_query=Dua+Lipa" target="_blank"><img
                                   class="yt-icon" src="../images/icons/yt.png" alt="youtube link" /></a>
-                      </div>,
-                  </div>
+                      </div>
+                  </div>,
                   <div class="multi-link">
                       <span>Selena Gomez</span>
                       <div>
@@ -484,20 +486,21 @@
                       </div>
                   </div>
               </figure>
+              <span class="button"><a href="#">Retour en haut de la page !</a></span>
           </section>
           <section id="Synth">
               <h2>
                   Synthpop
               </h2>
-              <p>
+              <div class="paragraph">
                   La synthpop utilise des synthétiseurs, boîtes à rythmes et séquenceurs. Ils sont souvent utilisés pour
                   remplacer d’autres instruments. Les chants sont également inclus, et les paroles sont généralement
                   inspirées de thèmes optimistes comme l’amour.
-              </p>
+              </div>
               <span class="source">Source : fr.wikipedia.org/wiki/Synthpop</span>
               <div class="paragraph">Artistes:
                   <div class="multi-link">
-                      <span> New Order</span>
+                      <span>New Order</span>
                       <div>
                           <a href="https://open.spotify.com/artist/0yNLKJebCb8Aueb54LYya3" target="_blank"><img
                                   class="spotify-icon" src="../images/icons/spotify.png" alt="spotify link" /></a>
@@ -547,19 +550,20 @@
                       </div>
                   </div>
               </figure>
+              <span class="button"><a href="#">Retour en haut de la page !</a></span>
           </section>
           <section id="K">
               <h2>
                   K-pop
               </h2>
-              <p>
+              <div class="paragraph">
                   La K-pop possède un large spectre musical mais aussi visuel. L'Institut National de l'Audiovisuel
                   français, l'INA, définit la K-pop comme étant une "musique de synthèse accompagnée de chorégraphies
                   calibrées au millimètre, portée par des chanteurs séduisants, à la pointe de la mode". Les chansons
                   sont des mélanges de pop, rock, hip hop et de musique électronique. C‘est souvent populaire parmi les
                   jeunes filles.
-              </p>
-              <span class="source">Source :fr.wikipedia.org/wiki/K-pop</span>
+              </div>
+              <span class="source">Source : fr.wikipedia.org/wiki/K-pop</span>
               <div class="paragraph">
                   Artistes:
                   <div class="multi-link">
@@ -595,6 +599,7 @@
                                   src="../images/icons/yt.png" alt="youtube link" /></a>
                       </div>
                   </div>
+                  <span class="button"><a href="#">Retour en haut de la page !</a></span>
               </div>
               <div class="spotify-integ">
                   <div>
@@ -629,11 +634,11 @@
               <h2>
                   Latin Pop
               </h2>
-              <p>
+              <div class="paragraph">
                   La pop latino mélange la pop et la musique latino-américaine. Souvent avec des rythmes forts, il donne
                   envie de danser. Le chanteur chante souvent en espagnol.
-              </p>
-              <span class="source">Source :fr.wikipedia.org/wiki/Pop_latino</span>
+              </div>
+              <span class="source">Source : fr.wikipedia.org/wiki/Pop_latino</span>
               <div class="paragraph">
                   Artistes:
                   <div class="multi-link">
@@ -687,17 +692,18 @@
                       </div>
                   </div>
               </figure>
+              <span class="button"><a href="#">Retour en haut de la page !</a></span>
           </section>
           <section id="Baroque">
               <h2>
                   Baroque Pop
               </h2>
-              <p>
+              <div class="paragraph">
                   Moins agressif, moins commercial, mais plus sérieux que la musique de l’époque, la pop baroque utilise
                   une instrumentation de musique classique, sa structure simpliste est plus proche de la pop standard.
                   Il est plus accessible que la musique classique. C ‘est une musique traditionnellement mélancolique et
                   dramatique par rapport au sunshine pop.
-              </p>
+              </div>
               <span class="source">Source : fr.wikipedia.org/wiki/Pop_baroque</span>
               <div class="paragraph">
                   Artiste:
@@ -741,6 +747,7 @@
                       </div>
                   </div>
               </figure>
+              <span class="button"><a href="#">Retour en haut de la page !</a></span>
           </section>
           <section id="today">
               <h2>
@@ -753,8 +760,8 @@
                   écouter et partager leurs émotions sur la musique.
                   La création est toujours essentielle dans la musique pop, ce qui mène à créer des nouveaux
                   types de musique et la mode dans le monde .
-                  <span class="button"><a href="#">Retour en haut de la page !</a></span>
               </div>
+              <span class="button"><a href="#">Retour en haut de la page !</a></span>
           </section>
       </main>
       <footer>
